[gd_scene load_steps=12 format=3 uid="uid://b507uilqemkkr"]

[ext_resource type="Script" path="res://Scripts/DisplayCard.gd" id="1_jivfa"]
[ext_resource type="Shader" path="res://Assets/Shaders/fake3D.gdshader" id="2_d8l5h"]
[ext_resource type="Texture2D" uid="uid://tokxphmf15bb" path="res://Assets/Cards/blank.png" id="2_liha4"]
[ext_resource type="Texture2D" uid="uid://jpkts2lq84dy" path="res://Assets/UI_Elements/buy_button_hovered.png" id="4_huw0p"]
[ext_resource type="Texture2D" uid="uid://14vvqgsfw0ox" path="res://Assets/UI_Elements/buy_button.png" id="4_x1hrt"]
[ext_resource type="FontFile" uid="uid://bp8k0t32rtbfy" path="res://Assets/Fonts/I-pixel-u.ttf" id="6_3tgd1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_naymv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_00w62"]
resource_local_to_scene = true
shader = ExtResource("2_d8l5h")
shader_parameter/rect_size = Vector2(224, 280)
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vhva8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7muvj"]
texture = ExtResource("4_huw0p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2p3yj"]
texture = ExtResource("4_x1hrt")

[node name="DisplayCard" type="Button"]
custom_minimum_size = Vector2(224, 280)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1696.0
offset_bottom = -800.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_naymv")
flat = true
script = ExtResource("1_jivfa")

[node name="CardTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_00w62")
layout_mode = 0
offset_right = 224.0
offset_bottom = 280.0
texture = ExtResource("2_liha4")

[node name="Description" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_top = -72.0
offset_right = 40.0
offset_bottom = -32.0

[node name="DescriptionText" type="RichTextLabel" parent="Description"]
visible = false
layout_mode = 2

[node name="Buy" type="Button" parent="."]
custom_minimum_size = Vector2(190, 66)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.171
anchor_right = 0.902
anchor_bottom = 1.407
offset_left = 12.0
offset_top = 0.119995
offset_right = -0.0480194
offset_bottom = 0.039978
theme_override_styles/focus = SubResource("StyleBoxEmpty_vhva8")
theme_override_styles/hover = SubResource("StyleBoxTexture_7muvj")
theme_override_styles/normal = SubResource("StyleBoxTexture_2p3yj")

[node name="Label" type="Label" parent="Buy"]
layout_mode = 0
offset_left = 28.0
offset_top = 14.0
offset_right = 216.0
offset_bottom = 77.0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("6_3tgd1")
theme_override_font_sizes/font_size = 26
text = "500"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Buy" to="." method="_on_buy_button_hovered"]
[connection signal="pressed" from="Buy" to="." method="_on_buy_button_clicked"]
